@@ -1,3 +1,6 @@
+2011-04-04 Kazuhiko
+* configure searchable text property ids and method ids for Address, Chat Address, Email, Fax, Link and Telephone.
+
 2011-03-02 Kazuhiko
 * cleanup document_security_interaction_workflow.
 
